# fuzzy-logic-project

ravindu/football-analysis/: .gitignore  README.md  pyproject.toml
ravindu/football-analysis/docs/: fuzzy-rule-ideas.md
ravindu/football-analysis/football_analysis/: fuzzy.py  fuzzy_image_driver.py  fuzzy_rules.py  image_analysis.py  main.py
