[tool.poetry]
name = "football-analysis"
version = "0.1.0"
description = ""
authors = ["Ravindu Weerasinghe <ravindutharuka2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
ultralytics = "^8.3.51"
opencv-python = "^4.10.0.84"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
scikit-fuzzy = "^0.5.0"
screeninfo = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
